--- a/HexArch/bin/src/main/resources/application.properties
+++ b/HexArch/bin/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA Setting
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.generate-ddl=false
-#spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
